--- a/giraph-dist/pom.xml
+++ b/giraph-dist/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.apache.giraph</groupId>
     <artifactId>giraph-parent</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.0-ARABESQUE</version>
   </parent>
 
   <artifactId>giraph-dist</artifactId>
@@ -87,43 +87,43 @@
       <groupId>org.apache.giraph</groupId>
       <artifactId>giraph-core</artifactId>
     </dependency>
-    <dependency>
-      <groupId>org.apache.giraph</groupId>
-      <artifactId>giraph-hbase</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.giraph</groupId>
-      <artifactId>giraph-accumulo</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.giraph</groupId>
-      <artifactId>giraph-hcatalog</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.giraph</groupId>
-      <artifactId>giraph-hive</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.giraph</groupId>
-      <artifactId>giraph-examples</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.giraph</groupId>
-      <artifactId>giraph-gora</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.giraph</groupId>
-      <artifactId>giraph-kibble</artifactId>
-      <exclusions>
-        <exclusion>
-          <groupId>javax.servlet</groupId>
-          <artifactId>javax.servlet-api</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.giraph</groupId>
-      <artifactId>giraph-rexster-io</artifactId>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.apache.giraph</groupId>-->
+      <!--<artifactId>giraph-hbase</artifactId>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>org.apache.giraph</groupId>-->
+      <!--<artifactId>giraph-accumulo</artifactId>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>org.apache.giraph</groupId>-->
+      <!--<artifactId>giraph-hcatalog</artifactId>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>org.apache.giraph</groupId>-->
+      <!--<artifactId>giraph-hive</artifactId>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>org.apache.giraph</groupId>-->
+      <!--<artifactId>giraph-examples</artifactId>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>org.apache.giraph</groupId>-->
+      <!--<artifactId>giraph-gora</artifactId>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>org.apache.giraph</groupId>-->
+      <!--<artifactId>giraph-kibble</artifactId>-->
+      <!--<exclusions>-->
+        <!--<exclusion>-->
+          <!--<groupId>javax.servlet</groupId>-->
+          <!--<artifactId>javax.servlet-api</artifactId>-->
+        <!--</exclusion>-->
+      <!--</exclusions>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>org.apache.giraph</groupId>-->
+      <!--<artifactId>giraph-rexster-io</artifactId>-->
+    <!--</dependency>-->
   </dependencies>
 </project>
