--- a/pom.xml
+++ b/pom.xml
@@ -1336,6 +1336,46 @@ under the License.
      </profile>
 
     <profile>
+      <id>arabesque_hadoop2</id>
+      <modules>
+      </modules>
+      <properties>
+        <hadoop.version>2.6.0</hadoop.version>
+        <!-- TODO: add these checks eventually -->
+        <project.enforcer.skip>true</project.enforcer.skip>
+        <giraph.maven.dependency.plugin.skip>true</giraph.maven.dependency.plugin.skip>
+        <giraph.maven.duplicate.finder.skip>true</giraph.maven.duplicate.finder.skip>
+      </properties>
+      <dependencies>
+        <!-- sorted lexicographically -->
+        <dependency>
+          <groupId>commons-configuration</groupId>
+          <artifactId>commons-configuration</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>commons-httpclient</groupId>
+          <artifactId>commons-httpclient</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.hadoop</groupId>
+          <artifactId>hadoop-auth</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.hadoop</groupId>
+          <artifactId>hadoop-common</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.hadoop</groupId>
+          <artifactId>hadoop-mapreduce-client-common</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.hadoop</groupId>
+          <artifactId>hadoop-mapreduce-client-core</artifactId>
+        </dependency>
+      </dependencies>
+    </profile>
+
+    <profile>
       <id>hadoop_snapshot</id>
       <modules>
         <module>giraph-dist</module>
@@ -2243,7 +2283,7 @@ under the License.
 
   <modules>
     <module>giraph-core</module>
-    <module>giraph-examples</module>
+    <!--<module>giraph-examples</module>-->
   </modules>
 
 </project>
