--- a/scripts/triangles.yaml
+++ b/scripts/triangles.yaml
@@ -2,3 +2,6 @@ computation: io.arabesque.examples.triangles.CountingTrianglesComputation
 input_graph_path: citeseer-single-label.graph
 output_path: Triangles_Output
 #communication_strategy: embeddings
+
+optimizations:
+  - io.arabesque.optimization.CliqueOptimization
