spark and arabesque: motifs and basics

--- a/pom.xml
+++ b/pom.xml
@@ -1,232 +1,261 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+   <modelVersion>4.0.0</modelVersion>
 
-	<groupId>io.arabesque</groupId>
-	<artifactId>arabesque</artifactId>
-	<version>1.0-BETA</version>
-	<name>Arabesque</name>
-	<description>A system for distributed graph mining</description>
-	<url>http://arabesque.io</url>
-	<licenses>
-		<license>
-			<name>The Apache License, Version 2.0</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-		</license>
-	</licenses>
-	<organization>
-		<name>Qatar Computing Research Institute</name>
-		<url>http://qcri.org.qa</url>
-	</organization>
-	<developers>
-		<developer>
-			<name>Alexandre Fonseca</name>
-			<email>afonseca@qf.org.qa</email>
-			<timezone>+3</timezone>
-			<organization>Qatar Computing Research Institute</organization>
-			<organizationUrl>http://qcri.org.qa</organizationUrl>
-		</developer>
-		<developer>
-			<name>Carlos Henrique Carvalho Teixeira</name>
-			<email>carloshct@gmail.com</email>
-			<timezone>-3</timezone>
-			<organization>Universidade Federal de Minas Gerais</organization>
-			<organizationUrl>https://www.ufmg.br/english/</organizationUrl>
-		</developer>
-		<developer>
-			<name>Georgos Siganos</name>
-			<email>gsiganos@qf.org.qa</email>
-			<timezone>+3</timezone>
-			<organization>Qatar Computing Research Institute</organization>
-			<organizationUrl>http://qcri.org.qa</organizationUrl>
-		</developer>
-	</developers>
-	<scm>
-		<connection>scm:git:git@github.com:Qatar-Computing-Research-Institute/Arabesque.git</connection>
-		<developerConnection>scm:git:git@github.com:Qatar-Computing-Research-Institute/Arabesque.git</developerConnection>
-		<url>git@github.com:Qatar-Computing-Research-Institute/Arabesque.git</url>
-	</scm>
-	<issueManagement>
-		<system>Github</system>
-		<url>https://github.com/Qatar-Computing-Research-Institute/Arabesque/issues</url>
-	</issueManagement>
+   <groupId>io.arabesque</groupId>
+   <artifactId>arabesque</artifactId>
+   <version>1.0-BETA</version>
+   <name>Arabesque</name>
+   <description>A system for distributed graph mining</description>
+   <url>http://arabesque.io</url>
+   <licenses>
+      <license>
+         <name>The Apache License, Version 2.0</name>
+         <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      </license>
+   </licenses>
+   <organization>
+      <name>Qatar Computing Research Institute</name>
+      <url>http://qcri.org.qa</url>
+   </organization>
+   <developers>
+      <developer>
+         <name>Alexandre Fonseca</name>
+         <email>afonseca@qf.org.qa</email>
+         <timezone>+3</timezone>
+         <organization>Qatar Computing Research Institute</organization>
+         <organizationUrl>http://qcri.org.qa</organizationUrl>
+      </developer>
+      <developer>
+         <name>Carlos Henrique Carvalho Teixeira</name>
+         <email>carloshct@gmail.com</email>
+         <timezone>-3</timezone>
+         <organization>Universidade Federal de Minas Gerais</organization>
+         <organizationUrl>https://www.ufmg.br/english/</organizationUrl>
+      </developer>
+      <developer>
+         <name>Georgos Siganos</name>
+         <email>gsiganos@qf.org.qa</email>
+         <timezone>+3</timezone>
+         <organization>Qatar Computing Research Institute</organization>
+         <organizationUrl>http://qcri.org.qa</organizationUrl>
+      </developer>
+   </developers>
+   <scm>
+      <connection>scm:git:git@github.com:Qatar-Computing-Research-Institute/Arabesque.git</connection>
+      <developerConnection>scm:git:git@github.com:Qatar-Computing-Research-Institute/Arabesque.git</developerConnection>
+      <url>git@github.com:Qatar-Computing-Research-Institute/Arabesque.git</url>
+   </scm>
+   <issueManagement>
+      <system>Github</system>
+      <url>https://github.com/Qatar-Computing-Research-Institute/Arabesque/issues</url>
+   </issueManagement>
 
-	<properties>
-		<giraph.version>1.2.0-ARABESQUE</giraph.version>
-		<hadoop.version>2.6.0</hadoop.version>
-		<giraph.scope>compile</giraph.scope>
-		<hadoop.scope>provided</hadoop.scope>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
+   <properties>
+      <giraph.version>1.2.0-ARABESQUE</giraph.version>
+      <hadoop.version>2.6.0</hadoop.version>
+      <spark.version>1.6.0</spark.version>
+      <scala.version>2.10.5</scala.version>
+      <giraph.scope>compile</giraph.scope>
+      <hadoop.scope>provided</hadoop.scope>
+      <spark.scope>provided</spark.scope>
+      <scala.scope>provided</scala.scope>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+   </properties>
 
-	<repositories>
-		<repository>
-			<id>Neo4j releases</id>
-			<url>http://m2.neo4j.org/content/repositories/releases</url>
-		</repository>
-        <repository>
-            <id>Sonatype-public</id>
-            <name>SnakeYAML repository</name>
-            <url>http://oss.sonatype.org/content/groups/public/</url>
-        </repository>
-		<repository>
-			<id>arabesque.io</id>
-			<name>Arabesque repository</name>
-			<url>http://maven.alexjf.net</url>
-		</repository>
-	</repositories>
+   <repositories>
+      <repository>
+         <id>Neo4j releases</id>
+         <url>http://m2.neo4j.org/content/repositories/releases</url>
+      </repository>
+      <repository>
+         <id>Sonatype-public</id>
+         <name>SnakeYAML repository</name>
+         <url>http://oss.sonatype.org/content/groups/public/</url>
+      </repository>
+      <repository>
+         <id>arabesque.io</id>
+         <name>Arabesque repository</name>
+         <url>http://maven.alexjf.net</url>
+      </repository>
+   </repositories>
 
-	<distributionManagement>
-		<repository>
-			<id>arabesque.io</id>
-			<url>scpexe://maven.alexjf.net:40000/home/alex/www/public_html/maven2</url>
-		</repository>
-	</distributionManagement>
+   <distributionManagement>
+      <repository>
+         <id>arabesque.io</id>
+         <url>scpexe://maven.alexjf.net:40000/home/alex/www/public_html/maven2</url>
+      </repository>
+   </distributionManagement>
 
-	<build>
-		<extensions>
-			<extension>
-				<groupId>org.apache.maven.wagon</groupId>
-				<artifactId>wagon-ssh-external</artifactId>
-				<version>LATEST</version>
-			</extension>
-		</extensions>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>false</filtering>
-			</resource>
-		</resources>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.gmavenplus</groupId>
-				<artifactId>gmavenplus-plugin</artifactId>
-				<version>1.5</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>addTestSources</goal>
-							<goal>testCompile</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19</version>
-				<configuration>
-					<!--<trimStackTrace>false</trimStackTrace>-->
-					<includes>
-						<include>**/*Spec.*</include>
-					</includes>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>2.4.2</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
-						<configuration>
-							<shadedArtifactAttached>true</shadedArtifactAttached>
-							<shadedClassifierName>jar-with-dependencies</shadedClassifierName>
-							<filters>
-								<filter>
-									<artifact>*:*</artifact>
-									<excludes>
-										<exclude>META-INF/LICENSE</exclude>
-									</excludes>
-								</filter>
-							</filters>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
+   <build>
+      <extensions>
+         <extension>
+            <groupId>org.apache.maven.wagon</groupId>
+            <artifactId>wagon-ssh-external</artifactId>
+            <version>LATEST</version>
+         </extension>
+      </extensions>
+      <resources>
+         <resource>
+            <directory>src/main/resources</directory>
+            <filtering>false</filtering>
+         </resource>
+      </resources>
+      <plugins>
+         <plugin>
+            <groupId>org.scala-tools</groupId>
+            <artifactId>maven-scala-plugin</artifactId>
+            <executions>
+               <execution>
+                  <goals>
+                     <goal>compile</goal>
+                     <goal>testCompile</goal>
+                  </goals>
+               </execution>
+            </executions>
+         </plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.3</version>
+            <configuration>
+               <source>1.7</source>
+               <target>1.7</target>
+            </configuration>
+         </plugin>
+         <plugin>
+            <groupId>org.codehaus.gmavenplus</groupId>
+            <artifactId>gmavenplus-plugin</artifactId>
+            <version>1.5</version>
+            <executions>
+               <execution>
+                  <goals>
+                     <goal>addTestSources</goal>
+                     <goal>testCompile</goal>
+                  </goals>
+               </execution>
+            </executions>
+         </plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.19</version>
+            <configuration>
+               <!--<trimStackTrace>false</trimStackTrace>-->
+               <includes>
+                  <include>**/*Spec.*</include>
+               </includes>
+            </configuration>
+         </plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>2.4.2</version>
+            <executions>
+               <execution>
+                  <phase>package</phase>
+                  <goals>
+                     <goal>shade</goal>
+                  </goals>
+                  <configuration>
+                     <shadedArtifactAttached>true</shadedArtifactAttached>
+                     <shadedClassifierName>jar-with-dependencies</shadedClassifierName>
+                     <filters>
+                        <filter>
+                           <artifact>*:*</artifact>
+                           <excludes>
+                              <exclude>META-INF/LICENSE</exclude>
+                           </excludes>
+                        </filter>
+                     </filters>
+                  </configuration>
+               </execution>
+            </executions>
+         </plugin>
+      </plugins>
+   </build>
 
-	<profiles>
-		<profile>
-			<id>local</id>
-			<properties>
-				<hadoop.scope>compile</hadoop.scope>
-			</properties>
-		</profile>
-	</profiles>
+   <profiles>
+      <profile>
+         <id>local</id>
+         <properties>
+            <hadoop.scope>compile</hadoop.scope>
+         </properties>
+      </profile>
+   </profiles>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.apache.hadoop</groupId>
-			<artifactId>hadoop-common</artifactId>
-			<version>${hadoop.version}</version>
-			<scope>${hadoop.scope}</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.hadoop</groupId>
-			<artifactId>hadoop-mapreduce-client-common</artifactId>
-			<version>${hadoop.version}</version>
-			<scope>${hadoop.scope}</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.hadoop</groupId>
-			<artifactId>hadoop-mapreduce-client-core</artifactId>
-			<version>${hadoop.version}</version>
-			<scope>${hadoop.scope}</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.giraph</groupId>
-			<artifactId>giraph-core</artifactId>
-			<version>${giraph.version}</version>
-			<scope>${giraph.scope}</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-collections4</artifactId>
-			<version>4.0</version>
-		</dependency>
-		<dependency>
-			<groupId>net.openhft</groupId>
-			<artifactId>koloboke-api-jdk6-7</artifactId>
-			<version>0.6.6</version>
-		</dependency>
-		<dependency>
-			<groupId>net.openhft</groupId>
-			<artifactId>koloboke-impl-jdk6-7</artifactId>
-			<version>0.6.6</version>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>net.jpountz.lz4</groupId>
-			<artifactId>lz4</artifactId>
-			<version>1.3.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.yaml</groupId>
-			<artifactId>snakeyaml</artifactId>
-			<version>1.14</version>
-		</dependency>
-		<!-- Testing dependencies -->
-		<dependency>
-			<groupId>org.spockframework</groupId>
-			<artifactId>spock-core</artifactId>
-			<version>1.0-groovy-2.4</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+   <dependencies>
+      <dependency>
+         <groupId>org.scala-lang</groupId>
+         <artifactId>scala-library</artifactId>
+         <version>${scala.version}</version>
+         <scope>${scala.scope}</scope>
+      </dependency>
+      <!-- Spark dependencies -->
+      <dependency>
+         <groupId>org.apache.spark</groupId>
+         <artifactId>spark-core_2.10</artifactId>
+         <version>${spark.version}</version>
+         <scope>${spark.scope}</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.hadoop</groupId>
+         <artifactId>hadoop-common</artifactId>
+         <version>${hadoop.version}</version>
+         <scope>${hadoop.scope}</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.hadoop</groupId>
+         <artifactId>hadoop-mapreduce-client-common</artifactId>
+         <version>${hadoop.version}</version>
+         <scope>${hadoop.scope}</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.hadoop</groupId>
+         <artifactId>hadoop-mapreduce-client-core</artifactId>
+         <version>${hadoop.version}</version>
+         <scope>${hadoop.scope}</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.giraph</groupId>
+         <artifactId>giraph-core</artifactId>
+         <version>${giraph.version}</version>
+         <scope>${giraph.scope}</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.commons</groupId>
+         <artifactId>commons-collections4</artifactId>
+         <version>4.0</version>
+      </dependency>
+      <dependency>
+         <groupId>net.openhft</groupId>
+         <artifactId>koloboke-api-jdk6-7</artifactId>
+         <version>0.6.6</version>
+      </dependency>
+      <dependency>
+         <groupId>net.openhft</groupId>
+         <artifactId>koloboke-impl-jdk6-7</artifactId>
+         <version>0.6.6</version>
+         <scope>runtime</scope>
+      </dependency>
+      <dependency>
+         <groupId>net.jpountz.lz4</groupId>
+         <artifactId>lz4</artifactId>
+         <version>1.3.0</version>
+      </dependency>
+      <dependency>
+         <groupId>org.yaml</groupId>
+         <artifactId>snakeyaml</artifactId>
+         <version>1.14</version>
+      </dependency>
+      <!-- Testing dependencies -->
+      <dependency>
+         <groupId>org.spockframework</groupId>
+         <artifactId>spock-core</artifactId>
+         <version>1.0-groovy-2.4</version>
+         <scope>test</scope>
+      </dependency>
+   </dependencies>
 
 </project>
