--- a/scripts/fsm.yaml
+++ b/scripts/fsm.yaml
@@ -2,11 +2,10 @@ computation: io.arabesque.examples.fsm.FSMComputation
 master_computation: io.arabesque.examples.fsm.FSMMasterComputation
 input_graph_path: citeseer.graph
 output_path: FSM_Output
-#communication_strategy: embeddings
 
 # Custom parameters
 arabesque.fsm.support: 300
-#arabesque.fsm.maxsize: 7
+arabesque.fsm.maxsize: 7
 
 # Split all aggregations in 10 parts for parallel aggregation
 # (use only with heavy aggregations)
