--- a/scripts/fsm.yaml
+++ b/scripts/fsm.yaml
@@ -1,4 +1,4 @@
-computation: io.arabesque.examples.fsm.FSMComputation
+computation: io.arabesque.gmlib.fsm.FSMComputation
 master_computation: io.arabesque.examples.fsm.FSMMasterComputation
 input_graph_path: citeseer.graph
 output_path: FSM_Output
