--- a/scripts/triangles.yaml
+++ b/scripts/triangles.yaml
@@ -1,4 +1,4 @@
-computation: io.arabesque.examples.triangles.CountingTrianglesComputation
+computation: io.arabesque.gmlib.triangles.CountingTrianglesComputation
 input_graph_path: citeseer-single-label.graph
 output_path: Triangles_Output
 
