--- a/scripts/fsm.yaml
+++ b/scripts/fsm.yaml
@@ -10,3 +10,11 @@ arabesque.fsm.maxsize: 7
 # Split all aggregations in 10 parts for parallel aggregation
 # (use only with heavy aggregations)
 arabesque.aggregators.default_splits: 10
+
+# reports params
+#reports_active: yes
+#reports_path: Reports_Path
+
+#flush_method: flush_by_pattern
+#flush_method: flush_by_entries
+#flush_method: flush_by_parts
