--- a/scripts/motifs.yaml
+++ b/scripts/motifs.yaml
@@ -4,3 +4,12 @@ output_path: Motifs_Output
 
 # Custom parameters
 arabesque.motif.maxsize: 3
+
+# reports params
+#reports_active: yes
+#reports_path: Reports_Path
+
+#flush_method: flush_by_pattern
+#flush_method: flush_by_entries
+#flush_method: flush_by_parts
+
