With deactivated reporting

--- a/scripts/cluster-spark.yaml
+++ b/scripts/cluster-spark.yaml
@@ -7,3 +7,10 @@ driver_memory: 8g
 max_result_size: 5g
 
 output_active: yes
+
+#log_level: debug
+
+comm_strategy: odag_sp_primitive
+# or odag_sp_generic
+# or odag_mp_primitive
+# or odag_mp_generic
