--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,20 @@
          <organization>Universidade Federal de Minas Gerais</organization>
          <organizationUrl>https://www.ufmg.br/english/</organizationUrl>
       </developer>
-
+      <developer>
+         <name>Eslam Hussein</name>
+         <email>eslam.ali00@gmail.com</email>
+         <timezone>+3</timezone>
+         <organization>Qatar Computing Research Institute</organization>
+         <organizationUrl>http://qcri.org.qa</organizationUrl>
+      </developer>
+      <developer>
+         <name>Abdurrahman Ghanem</name>
+         <email>abghanem@hbku.edu.qa</email>
+         <timezone>+3</timezone>
+         <organization>Qatar Computing Research Institute</organization>
+         <organizationUrl>http://qcri.org.qa</organizationUrl>
+      </developer>
    </developers>
    <scm>
       <connection>scm:git:git@github.com:Qatar-Computing-Research-Institute/Arabesque.git</connection>
@@ -326,17 +339,6 @@
          <groupId>org.spockframework</groupId>
          <artifactId>spock-core</artifactId>
          <version>1.0-groovy-2.4</version>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.testng</groupId>
-         <artifactId>testng</artifactId>
-         <version>RELEASE</version>
-      </dependency>
-      <dependency>
-         <groupId>org.testng</groupId>
-         <artifactId>testng</artifactId>
-         <version>6.14.3</version>
          <scope>test</scope>
       </dependency>
    </dependencies>
